kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/003_associations_04.kmt
/* $Id: 003_associations_04.kmt,v 1.1 2007-09-10 08:35:12 cfaucher Exp $ */

// Test of a invalid associations

package root_package;


/* opposite mismatch  : the association is illformed */
class A {
    reference b : B#r2
}
class B {
	reference r1 : A#b
	reference r2 : C#r1
	
}

class C {
	reference r1 : B#r2
}
